--- a/index.html
+++ b/index.html
@@ -1,10 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" context="width=device-width, initial-scale=1" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="index.css" />
+
     <title>Nick Salesky</title>
   </head>
 
   <body>
-    <h1>Hello world</h1>
+    <nav id="navbar">
+      <ul class="navbar-list">
+        <li class="navbar-item">
+          <a href="#" class="navbar-link"> Home </a>
+        </li>
+
+        <li class="navbar-item">
+          <a href="#" class="navbar-link"> About </a>
+        </li>
+
+        <li class="navbar-item">
+          <a href="#" class="navbar-link"> Contact </a>
+        </li>
+      </ul>
+    </nav>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    />
   </body>
 </html>
