--- a/index.html
+++ b/index.html
@@ -4,33 +4,38 @@
     <meta charset="utf-8" />
     <meta name="viewport" context="width=device-width, initial-scale=1" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
 
     <title>Nick Salesky</title>
   </head>
 
   <body>
-    <nav id="navbar">
-      <ul class="navbar-list">
-        <li class="navbar-item">
-          <a href="#" class="navbar-link"> Home </a>
-        </li>
-
-        <li class="navbar-item">
-          <a href="#" class="navbar-link"> About </a>
-        </li>
-
-        <li class="navbar-item">
-          <a href="#" class="navbar-link"> Contact </a>
-        </li>
-      </ul>
+    <!-- <div class="container"> -->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <div class="navbar-nav">
+            <a class="nav-link" aria-current="page" href="#">Home</a>
+            <a class="nav-link" aria-current="page" href="#">About</a>
+            <a class="nav-link" aria-current="page" href="#">Contact</a>
+          </div>
+        </div>
+      </div>
     </nav>
+    <!-- </div> -->
+
+    <h1>Hello world</h1>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
